Fix placeholder text being clipped on Ada inputs

--- a/src/scss/cs/forms.scss
+++ b/src/scss/cs/forms.scss
@@ -67,6 +67,9 @@ input[type=text], input[type=search] {
   &:not(.select__input) {
     line-height: 50px !important;
   }
+  &::placeholder {
+    overflow: visible;
+  }
 }
 
 .basic-multi-select {
